--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="m3_black">#000000</color>
+    <color name="m3_ref_neutral_neutral10">#1C1B1F</color>
+    <color name="main_theme_blue">#1DB9DB</color>
 </resources>
