--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="main_theme_blue">#1DB9DB</color>
+    <color name="main_theme_subblue">#70A2A7</color>
     <color name="general_theme_error">#B3261E</color>
 </resources>
