--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="main_theme_blue">#1DB9DB</color>
     <color name="general_theme_error">#B3261E</color>
+    <color name="gray">#7d000000</color>
 </resources>
